--- a/WPF/App.config
+++ b/WPF/App.config
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbContextBEFL" connectionString="data source=DESKTOP-LKQAHN8\SQLEXPRESS;initial catalog=BEFLspr;integrated security=True" providerName="System.Data.SqlClient" />
+    <add name="DbContextBEFL" connectionString="data source=ANTSIFEROV\SQLEXPRESS;initial catalog=BEFLspr;integrated security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
