--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -85,6 +85,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Convertors.cs" />
+    <Compile Include="Infrastrucrure\PageMessage.cs" />
     <Compile Include="Infrastrucrure\RelayCommand.cs" />
     <Compile Include="ViewModels\depsViewModel.cs" />
     <Compile Include="ViewModels\empsViewModel.cs" />
