--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Infrastrucrure\RelayCommand.cs" />
     <Compile Include="ViewModels\depsViewModel.cs" />
     <Compile Include="ViewModels\empsViewModel.cs" />
+    <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\possViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
