--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -87,6 +88,7 @@
     <Compile Include="Convertors.cs" />
     <Compile Include="Infrastrucrure\PageMessage.cs" />
     <Compile Include="Infrastrucrure\RelayCommand.cs" />
+    <Compile Include="ViewModels\compsViewModel.cs" />
     <Compile Include="ViewModels\depsViewModel.cs" />
     <Compile Include="ViewModels\empsViewModel.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
@@ -94,6 +96,9 @@
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="View\comps.xaml.cs">
+      <DependentUpon>comps.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\deps.xaml.cs">
       <DependentUpon>deps.xaml</DependentUpon>
     </Compile>
@@ -112,6 +117,10 @@
     <Compile Include="View\poss.xaml.cs">
       <DependentUpon>poss.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\comps.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\deps.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
