--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Migrations\201612031838423_CompProps.Designer.cs">
       <DependentUpon>201612031838423_CompProps.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612061148407_NewCOmpAttr.cs" />
+    <Compile Include="Migrations\201612061148407_NewCOmpAttr.Designer.cs">
+      <DependentUpon>201612061148407_NewCOmpAttr.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Pos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,6 +74,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201612031838423_CompProps.resx">
       <DependentUpon>201612031838423_CompProps.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612061148407_NewCOmpAttr.resx">
+      <DependentUpon>201612061148407_NewCOmpAttr.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
