--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -92,6 +92,7 @@
     <Compile Include="ViewModels\compsViewModel.cs" />
     <Compile Include="ViewModels\comptypeViewModel.cs" />
     <Compile Include="ViewModels\depsViewModel.cs" />
+    <Compile Include="ViewModels\dicdataViewModel.cs" />
     <Compile Include="ViewModels\empsViewModel.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\monitorViewModel.cs" />
