--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -81,10 +81,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
+    <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </ApplicationDefinition>
+    </Page>
     <Compile Include="Convertors.cs" />
     <Compile Include="Infrastrucrure\PageMessage.cs" />
     <Compile Include="Infrastrucrure\RelayCommand.cs" />
@@ -92,6 +92,7 @@
     <Compile Include="ViewModels\compsViewModel.cs" />
     <Compile Include="ViewModels\depsViewModel.cs" />
     <Compile Include="ViewModels\dicdataViewModel.cs" />
+    <Compile Include="ViewModels\dockviewerViewModel.cs" />
     <Compile Include="ViewModels\empsViewModel.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\mcViewModel.cs" />
@@ -109,6 +110,9 @@
     </Compile>
     <Compile Include="View\dicdata.xaml.cs">
       <DependentUpon>dicdata.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\docviewer.xaml.cs">
+      <DependentUpon>docviewer.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -146,6 +150,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\dicdata.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\docviewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
