--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -86,6 +86,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Convertors.cs" />
+    <Compile Include="ExportToXml.cs" />
     <Compile Include="Infrastrucrure\PageMessage.cs" />
     <Compile Include="Infrastrucrure\RelayCommand.cs" />
     <Compile Include="Infrastrucrure\Settings.cs" />
